@@ -16,7 +16,7 @@
 			<firstname>Brenden</firstname>
 			<surname>Matthews</surname>
 		</author>
-		<date>2009-07-20</date>
+		<date>2009-07-31</date>
 	</refentryinfo>
 	<refmeta>
 		<refentrytitle>conky</refentrytitle>
