@@ -1264,9 +1264,9 @@
             <option>logfile lines (next_check)</option>
         </term>
         <listitem>Displays first N lines of supplied text file. The
-        file is checked every 'next_check' update. If next_check
-        is not supplied, Conky defaults to 2. Max of 30 lines can be
-        displayed, or until the text buffer is filled.
+        file is checked every 'next_check' update. If next_check is
+        not supplied, Conky defaults to 2. Max of 30 lines can be
+        displayed, or until the text buffer is filled. 
         <para /></listitem>
     </varlistentry>
     <varlistentry>
@@ -2797,9 +2797,9 @@
             <option>logfile lines (next_check)</option>
         </term>
         <listitem>Displays last N lines of supplied text file. The
-        file is checked every 'next_check' update. If next_check
-        is not supplied, Conky defaults to 2. Max of 30 lines can be
-        displayed, or until the text buffer is filled.
+        file is checked every 'next_check' update. If next_check is
+        not supplied, Conky defaults to 2. Max of 30 lines can be
+        displayed, or until the text buffer is filled. 
         <para /></listitem>
     </varlistentry>
     <varlistentry>
