@@ -1,3 +1,6 @@
+2009-07-31
+	* Removed alias config option due to brokenness
+
 2009-07-19
 	* Fixed out-of-tree builds
 	* Update MPD elapsed/progress when stopped (sf.net #2792113)
